// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> DateHandling story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r14:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input"
        id=":r14:"
        type="date"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r0:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input"
        id=":r0:"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> Disabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        aria-disabled="true"
        class="label label--md label--disabled input-field__label input-field__label--disabled"
        for=":rl:"
      >
        <span
          class="text text--label-md"
        >
          Disabled input field
        </span>
      </label>
      <div
        class="input-field__subLabel input-field__label--disabled"
      >
        <span
          class="text text--body-sm"
          id=":rn:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rn: :rm:"
        aria-invalid="false"
        class="input"
        disabled=""
        id=":rl:"
        type="text"
        value="Text in disabled field"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        aria-disabled="true"
        class="field-note field-note--disabled"
        id=":rm:"
      >
        <span
          class="text text--body-sm"
        >
          This InputField is disabled
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> Error story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":rc:"
      >
        <span
          class="text text--label-md"
        >
          Error input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":re:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":re: :rd:"
        aria-invalid="true"
        class="input error"
        id=":rc:"
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note field-note--error"
        id=":rd:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12 16.4615C12.1743 16.4615 12.3205 16.4025 12.4385 16.2845C12.5565 16.1667 12.6155 16.0206 12.6155 15.8462C12.6155 15.6717 12.5565 15.5256 12.4385 15.4078C12.3205 15.2898 12.1743 15.2308 12 15.2308C11.8257 15.2308 11.6795 15.2898 11.5615 15.4078C11.4435 15.5256 11.3845 15.6717 11.3845 15.8462C11.3845 16.0206 11.4435 16.1667 11.5615 16.2845C11.6795 16.4025 11.8257 16.4615 12 16.4615ZM12.0008 13.1537C12.1426 13.1537 12.2612 13.1058 12.3567 13.01C12.4522 12.9142 12.5 12.7954 12.5 12.6537V7.65375C12.5 7.51208 12.452 7.39333 12.356 7.2975C12.26 7.20167 12.1411 7.15375 11.9993 7.15375C11.8574 7.15375 11.7388 7.20167 11.6433 7.2975C11.5478 7.39333 11.5 7.51208 11.5 7.65375V12.6537C11.5 12.7954 11.548 12.9142 11.644 13.01C11.74 13.1058 11.8589 13.1537 12.0008 13.1537ZM12.0033 21C10.7588 21 9.58867 20.7638 8.493 20.2915C7.3975 19.8192 6.4445 19.1782 5.634 18.3685C4.8235 17.5588 4.18192 16.6067 3.70925 15.512C3.23642 14.4175 3 13.2479 3 12.0033C3 10.7588 3.23617 9.58867 3.7085 8.493C4.18083 7.3975 4.82183 6.4445 5.6315 5.634C6.44117 4.8235 7.39333 4.18192 8.488 3.70925C9.5825 3.23642 10.7521 3 11.9968 3C13.2413 3 14.4113 3.23617 15.507 3.7085C16.6025 4.18083 17.5555 4.82183 18.366 5.6315C19.1765 6.44117 19.8181 7.39333 20.2908 8.488C20.7636 9.5825 21 10.7521 21 11.9968C21 13.2413 20.7638 14.4113 20.2915 15.507C19.8192 16.6025 19.1782 17.5555 18.3685 18.366C17.5588 19.1765 16.6067 19.8181 15.512 20.2908C14.4175 20.7636 13.2479 21 12.0033 21Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          This is a fieldnote with an error.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> InputWithin story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1d:"
      >
        <span
          class="text text--label-md"
        >
          Input field with button inside
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input input-field__input--input-within"
        id=":r1d:"
        type="text"
      />
      <div
        class="input-field__input-within"
      >
        <button
          class="button button--layout-none button--secondary button--sm button--size-sm button--variant-default"
          type="button"
        >
          <span
            class="text text--label-sm button__text"
          >
            Button
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> LeadingIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":rq:"
        aria-invalid="false"
        aria-label="search field"
        class="input input-field__input--leading-icon"
        id=":ro:"
        placeholder="Search..."
        type="text"
      />
      <div
        class="input-field__leading-icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.53861 15.231C7.93994 15.231 6.58511 14.6756 5.47411 13.5648C4.36328 12.4538 3.80786 11.0989 3.80786 9.50028C3.80786 7.90161 4.36328 6.54678 5.47411 5.43578C6.58511 4.32495 7.93994 3.76953 9.53861 3.76953C11.1373 3.76953 12.4921 4.32495 13.6031 5.43578C14.7139 6.54678 15.2694 7.90161 15.2694 9.50028C15.2694 10.1951 15.1463 10.8675 14.9001 11.5175C14.6539 12.1675 14.3309 12.7233 13.9309 13.1848L19.8386 19.0925C19.9321 19.1862 19.9821 19.3009 19.9886 19.4368C19.9949 19.5728 19.9449 19.6939 19.8386 19.8003C19.7321 19.9066 19.6141 19.9598 19.4846 19.9598C19.3553 19.9598 19.2374 19.9066 19.1309 19.8003L13.2231 13.8925C12.7231 14.3182 12.1481 14.6477 11.4981 14.881C10.8481 15.1144 10.1949 15.231 9.53861 15.231ZM9.53861 14.231C10.8654 14.231 11.9856 13.7743 12.8991 12.8608C13.8126 11.9474 14.2694 10.8273 14.2694 9.50028C14.2694 8.17328 13.8126 7.05311 12.8991 6.13978C11.9856 5.22628 10.8654 4.76953 9.53861 4.76953C8.21161 4.76953 7.09144 5.22628 6.17811 6.13978C5.26461 7.05311 4.80786 8.17328 4.80786 9.50028C4.80786 10.8273 5.26461 11.9474 6.17811 12.8608C7.09144 13.7743 8.21161 14.231 9.53861 14.231Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> LongInputWithin story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1g:"
      >
        <span
          class="text text--label-md"
        >
          Input field with button inside
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input input-field__input--input-within"
        id=":r1g:"
        type="text"
      />
      <div
        class="input-field__input-within"
      >
        <button
          class="button button--layout-left button--secondary button--sm button--size-sm button--variant-default"
          type="button"
        >
          <span
            class="text text--label-sm button__text"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="16px"
              style="--icon-size: 16px;"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.0001 7.70775L6.06159 18.6463C5.96809 18.7398 5.85334 18.7898 5.71734 18.7963C5.5815 18.8026 5.46034 18.7526 5.35384 18.6463C5.2475 18.5398 5.19434 18.4218 5.19434 18.2923C5.19434 18.1628 5.2475 18.0448 5.35384 17.9385L16.2923 7H9.50009C9.35842 7 9.23967 6.952 9.14384 6.856C9.048 6.76 9.00009 6.64108 9.00009 6.49925C9.00009 6.35742 9.048 6.23875 9.14384 6.14325C9.23967 6.04775 9.35842 6 9.50009 6H17.1923C17.4212 6 17.613 6.07742 17.7678 6.23225C17.9227 6.38708 18.0001 6.57892 18.0001 6.80775V14.5C18.0001 14.6417 17.9521 14.7604 17.8561 14.8562C17.7601 14.9521 17.6412 15 17.4993 15C17.3575 15 17.2388 14.9521 17.1433 14.8562C17.0478 14.7604 17.0001 14.6417 17.0001 14.5V7.70775Z"
              />
            </svg>
            Button with extra text
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoFieldnote story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r9:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rb:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":rb:"
        aria-invalid="false"
        class="input"
        id=":r9:"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoVisibleLabel story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline input-field__overline--no-label"
    />
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r13: :r12:"
        aria-invalid="false"
        aria-label="Input for no visible label"
        class="input"
        id=":r11:"
        required=""
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":r12:"
      >
        <span
          class="text text--body-sm"
        >
          This input field has no visible label
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> ReadOnly story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":ri:"
      >
        <span
          class="text text--label-md"
        >
          Read-only field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rk:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rk: :rj:"
        aria-invalid="false"
        class="input"
        id=":ri:"
        readonly=""
        type="text"
        value="some read-only information"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":rj:"
      >
        <span
          class="text text--body-sm"
        >
          This will show up like text, but not be interactive
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> Required story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":rr:"
      >
        <span
          class="text text--label-md"
        >
          Input field with fieldNote
        </span>
      </label>
      <span
        class="text text--body-sm input-field__required-text"
      >
        (Required)
      </span>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rt:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rt: :rs:"
        aria-invalid="false"
        class="input"
        id=":rr:"
        required=""
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":rs:"
      >
        <span
          class="text text--body-sm"
        >
          This is a fieldnote for a required input field.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> RequiredDisabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        aria-disabled="true"
        class="label label--md label--disabled input-field__label input-field__label--disabled"
        for=":ru:"
      >
        <span
          class="text text--label-md"
        >
          Input field with fieldNote
        </span>
      </label>
      <span
        aria-disabled="true"
        class="text text--body-sm input-field__required-text input-field__required-text--disabled"
      >
        (Required)
      </span>
      <div
        class="input-field__subLabel input-field__label--disabled"
      >
        <span
          class="text text--body-sm"
          id=":r10:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r10: :rv:"
        aria-invalid="false"
        class="input"
        disabled=""
        id=":ru:"
        required=""
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        aria-disabled="true"
        class="field-note field-note--disabled"
        id=":rv:"
      >
        <span
          class="text text--body-sm"
        >
          This is a fieldnote for a required input field.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> ShowHint story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1a:"
      >
        <span
          class="text text--label-md"
        >
          Field with Optional Hint
        </span>
      </label>
      <span
        class="text text--body-sm input-field__required-text"
      >
        (Optional)
      </span>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1c:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":r1c:"
        aria-invalid="false"
        class="input"
        id=":r1a:"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> TimeHandling story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r17:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input"
        id=":r17:"
        type="time"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> Warning story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":rf:"
      >
        <span
          class="text text--label-md"
        >
          Warning input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rh:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rh: :rg:"
        aria-invalid="false"
        class="input warning"
        id=":rf:"
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note field-note--warning"
        id=":rg:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            warning
          </title>
          <path
            d="M4.12573 19.9999C3.97006 19.9999 3.83231 19.9629 3.71248 19.8889C3.59248 19.8149 3.49923 19.7173 3.43273 19.5961C3.36006 19.4768 3.32006 19.3476 3.31273 19.2086C3.30556 19.0695 3.34448 18.9292 3.42948 18.7879L11.3012 5.21187C11.3862 5.07053 11.4887 4.96778 11.6087 4.90362C11.7286 4.83962 11.859 4.80762 12 4.80762C12.141 4.80762 12.2714 4.83962 12.3912 4.90362C12.5112 4.96778 12.6137 5.07053 12.6987 5.21187L20.5705 18.7879C20.6555 18.9292 20.6944 19.0695 20.6872 19.2086C20.6799 19.3476 20.6399 19.4768 20.5672 19.5961C20.5007 19.7173 20.4075 19.8149 20.2875 19.8889C20.1676 19.9629 20.0299 19.9999 19.8742 19.9999H4.12573ZM12 17.6154C12.1743 17.6154 12.3205 17.5564 12.4385 17.4384C12.5565 17.3204 12.6155 17.1742 12.6155 16.9999C12.6155 16.8255 12.5565 16.6794 12.4385 16.5614C12.3205 16.4434 12.1743 16.3844 12 16.3844C11.8256 16.3844 11.6795 16.4434 11.5615 16.5614C11.4435 16.6794 11.3845 16.8255 11.3845 16.9999C11.3845 17.1742 11.4435 17.3204 11.5615 17.4384C11.6795 17.5564 11.8256 17.6154 12 17.6154ZM12.0007 15.3844C12.1426 15.3844 12.2612 15.3365 12.3567 15.2406C12.4522 15.1448 12.5 15.026 12.5 14.8844V10.8844C12.5 10.7427 12.452 10.624 12.356 10.5281C12.26 10.4323 12.1411 10.3844 11.9992 10.3844C11.8574 10.3844 11.7387 10.4323 11.6432 10.5281C11.5477 10.624 11.5 10.7427 11.5 10.8844V14.8844C11.5 15.026 11.548 15.1448 11.644 15.2406C11.74 15.3365 11.8589 15.3844 12.0007 15.3844Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          This uses the warning treatment and also applies to the field note
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithAMaxLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1j:"
      >
        <span
          class="text text--label-md"
        >
          test label
        </span>
      </label>
      <div
        class="text text--body-sm input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1l:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":r1l:"
        aria-invalid="false"
        class="input error"
        id=":r1j:"
        maxlength="15"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithARecommendedLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1m:"
      >
        <span
          class="text text--label-md"
        >
          Shortened Length Field
        </span>
      </label>
      <div
        class="text text--body-sm input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1o:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":r1o:"
        aria-invalid="false"
        class="input error"
        id=":r1m:"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithBothMaxAndRecommendedLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1p:"
      >
        <span
          class="text text--label-md"
        >
          test label
        </span>
      </label>
      <div
        class="text text--body-sm input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1r:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r1r: :r1q:"
        aria-invalid="false"
        class="input error"
        id=":r1p:"
        maxlength="20"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note field-note--error"
        id=":r1q:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12 16.4615C12.1743 16.4615 12.3205 16.4025 12.4385 16.2845C12.5565 16.1667 12.6155 16.0206 12.6155 15.8462C12.6155 15.6717 12.5565 15.5256 12.4385 15.4078C12.3205 15.2898 12.1743 15.2308 12 15.2308C11.8257 15.2308 11.6795 15.2898 11.5615 15.4078C11.4435 15.5256 11.3845 15.6717 11.3845 15.8462C11.3845 16.0206 11.4435 16.1667 11.5615 16.2845C11.6795 16.4025 11.8257 16.4615 12 16.4615ZM12.0008 13.1537C12.1426 13.1537 12.2612 13.1058 12.3567 13.01C12.4522 12.9142 12.5 12.7954 12.5 12.6537V7.65375C12.5 7.51208 12.452 7.39333 12.356 7.2975C12.26 7.20167 12.1411 7.15375 11.9993 7.15375C11.8574 7.15375 11.7388 7.20167 11.6433 7.2975C11.5478 7.39333 11.5 7.51208 11.5 7.65375V12.6537C11.5 12.7954 11.548 12.9142 11.644 13.01C11.74 13.1058 11.8589 13.1537 12.0008 13.1537ZM12.0033 21C10.7588 21 9.58867 20.7638 8.493 20.2915C7.3975 19.8192 6.4445 19.1782 5.634 18.3685C4.8235 17.5588 4.18192 16.6067 3.70925 15.512C3.23642 14.4175 3 13.2479 3 12.0033C3 10.7588 3.23617 9.58867 3.7085 8.493C4.18083 7.3975 4.82183 6.4445 5.6315 5.634C6.44117 4.8235 7.39333 4.18192 8.488 3.70925C9.5825 3.23642 10.7521 3 11.9968 3C13.2413 3 14.4113 3.23617 15.507 3.7085C16.6025 4.18083 17.5555 4.82183 18.366 5.6315C19.1765 6.44117 19.8181 7.39333 20.2908 8.488C20.7636 9.5825 21 10.7521 21 11.9968C21 13.2413 20.7638 14.4113 20.2915 15.507C19.8192 16.6025 19.1782 17.5555 18.3685 18.366C17.5588 19.1765 16.6067 19.8181 15.512 20.2908C14.4175 20.7636 13.2479 21 12.0033 21Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Longer Field Description
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithFullDescription story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r3:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r5:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r5: :r4:"
        aria-invalid="false"
        class="input"
        id=":r3:"
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":r4:"
      >
        <span
          class="text text--body-sm"
        >
          Field validation description.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithText story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r6:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r8:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r8: :r7:"
        aria-invalid="false"
        class="input"
        id=":r6:"
        type="text"
        value="Text value"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":r7:"
      >
        <span
          class="text text--body-sm"
        >
          This is a fieldnote.
        </span>
      </div>
    </div>
  </div>
</div>
`;
